# c-_project

./: CMakeLists.txt  README.md
include/: video_processor.h
src/: main.cpp  video_processor.cpp
